--- a/Includes/Libft/Makefile
+++ b/Includes/Libft/Makefile
@@ -6,7 +6,7 @@
 #    By: andcarva <andcarva@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/24 14:34:40 by andcarva          #+#    #+#              #
-#    Updated: 2025/03/11 15:59:06 by andcarva         ###   ########.fr        #
+#    Updated: 2025/03/13 17:39:19 by andcarva         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,7 +21,7 @@ SRC= ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isascii.c ft_isalpha.c \
 		ft_strlcat.c ft_strlcpy.c ft_strlen.c ft_strncmp.c ft_strnstr.c \
 		ft_strrchr.c ft_substr.c ft_tolower.c ft_toupper.c ft_strtrim.c \
 		ft_split.c ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c \
-		ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c 
+		ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_free_split.c
 		
 SRC_LIST= ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c \
 			ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c \
